# listify

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  config.py  docker-compose.yml  main.py  opencode.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker.yml
.opencode/skills/lint/: SKILL.md
.opencode/skills/release/: SKILL.md
.opencode/skills/test/: SKILL.md
bot/: __init__.py  commands.py  formatters.py  logging_config.py  notifications.py  run.py
database/: __init__.py  db.py
handlers/: __init__.py  add.py  commands.py  delete.py  edit.py  list.py
keyboards/: __init__.py  cancel.py  confirm.py
middlewares/: access_check.py  auto_logging.py  fsm_interrupter.py
models/: note.py
scripts/: pack_for_deploy.py
scripts/tests/: conftest.py  test_access_check_middleware.py  test_bot_startup.py  test_database.py
tests/: conftest.py  test_add_handler.py  test_database.py  test_delete_handler.py  test_edit_handler.py  test_formatters.py  test_fsm_middleware.py  test_list_handler.py  test_notifications.py
