[project]
name = "listify"
version = "0.1.0"
description = "Telegram bot for notes"
requires-python = ">=3.11"

[tool.pyright]
venvPath = "."
pythonVersion = "3.12"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "RUF"]
ignore = ["RUF100", "E501", "RUF001"]